--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
     "eslint-plugin-react": "^7.37.1",
